# OpenCL-CLHPP

./: CMakeLists.txt  input_cl.hpp
include/: CMakeLists.txt  Config.cmake.in
